--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "element-ui": "^2.14.0",
     "vue": "^2.4.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^2.7.0",
