--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.4.1",
     "markdown-it": "^10.0.0",
     "markdown-it-attrs": "^3.0.1",
+    "mavon-editor": "^2.9.0",
     "vue": "^2.6.10",
     "vue-codemirror": "^4.0.6",
     "vue-router": "^3.1.3",
