--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "markdown-it": "^10.0.0",
     "markdown-it-attrs": "^3.0.1",
     "mavon-editor": "^2.9.0",
+    "swiper": "^6.3.5",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-codemirror": "^4.0.6",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
