--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "markdown-it": "^10.0.0",
     "markdown-it-attrs": "^3.0.1",
     "mavon-editor": "^2.9.0",
+    "moment": "^2.29.1",
     "swiper": "^6.3.5",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^4.1.1",
