--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue-awesome-swiper": "^4.1.1",
     "vue-codemirror": "^4.0.6",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "wangeditor": "^4.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "^4.1.0",
